<resources>
    <string name="app_name">PSWLab</string>

    <string name="start_text">0</string>

    <string name="cap1">1</string>
    <string name="cap2">2</string>
    <string name="cap3">3</string>
    <string name="cap4">4</string>
    <string name="cap5">5</string>
    <string name="cap6">6</string>
    <string name="cap7">7</string>
    <string name="cap8">8</string>
    <string name="cap9">9</string>
    <string name="cap0">0</string>
    <string name="capA">A</string>
    <string name="capB">B</string>
    <string name="capC">C</string>
    <string name="capD">D</string>
    <string name="capE">E</string>
    <string name="capF">F</string>

    <string name="cap_point">.</string>

    <string name="cap_mult">*</string>
    <string name="cap_div">/</string>
    <string name="cap_add">+</string>
    <string name="cap_sub">-</string>
    <string name="cap_clean">CL</string>
    <string name="cap_equal">=</string>

    <string name="cap_and">and</string>
    <string name="cap_or">or</string>
    <string name="cap_xor">xor</string>
    <string name="cap_not">not</string>

    <string name="mode_hex">hex</string>
    <string name="mode_dec">dec</string>
    <string name="mode_bin">bin</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ctg">ctg</string>

    <string name="asin">asn</string>
    <string name="acos">acs</string>
    <string name="atan">atg</string>
    <string name="actg">act</string>

    <string name="sqr">sqr</string>
    <string name="sqrt">sqrt</string>
    <string name="log">log</string>
    <string name="exp">exp</string>

    <string name="pi">pi</string>
    <string name="e">e</string>
    <string name="c">c</string>
    <string name="na">na</string>

    <string name="cap_more">mr</string>
    <string name="cap_ok">save</string>

    <string name="cap_value">value: </string>
    <string name="cap_new_value">new: </string>

    <string name="error">error</string>

    <string name="normal_tab">Normal</string>
    <string name="program_tab">Program</string>
    <string name="picture_tab">Picture</string>

</resources>
