<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.eystudio.android.firstlab.CalculatorActivity">


    <TableRow>

        <TextView
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:background="@color/colorGray"
            android:textSize="20sp"
            android:text="@string/start_text"/>
    </TableRow>

    <TableRow android:layout_marginTop="30dp" android:layout_weight="1">

        <Button style="@style/CalcButtonTheme" android:text="@string/cap1"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap2"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap3"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap_clean"/>
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button style="@style/CalcButtonTheme" android:text="@string/cap4"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap5"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap6"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap_equal"/>
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button style="@style/CalcButtonTheme" android:text="@string/cap7"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap8"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap9"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap_mult"/>
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button style="@style/CalcButtonTheme" android:text="@string/cap_add"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap0"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap_sub"/>
        <Button style="@style/CalcButtonTheme" android:text="@string/cap_div"/>
    </TableRow>


</TableLayout>
