<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.eystudio.android.firstlab.MoreActivity">

    <TableRow >
        <LinearLayout android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <TextView android:layout_margin="5dp"
                style="@style/Caption"
                android:text="@string/cap_value"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"

                />
            <TextView android:layout_margin="10dp"
                style="@style/Caption"
                android:text="@string/cap_new_value"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                />
        </LinearLayout>

        <LinearLayout  android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView  style="@style/ResultStyle"
                android:id="@+id/more_value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:text="@string/start_text"/>

            <TextView  android:layout_marginTop="10dp" style="@style/ResultStyle"
                android:id="@+id/more_new_value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:text="@string/start_text"/>
        </LinearLayout>
    </TableRow>

    <TableRow>
        <Button style="@style/CalcButtonTheme"
            android:padding="20dp"
            android:id="@+id/button_more_ok"
            android:text="@string/cap_ok"/>
    </TableRow>

    <TableRow android:layout_weight="1">
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_sin"
            android:text="@string/sin"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_cos"
            android:text="@string/cos"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_tan"
            android:text="@string/tan"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_ctg"
            android:text="@string/ctg"/>
    </TableRow>

    <TableRow android:layout_weight="1">
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_asin"
            android:text="@string/asin"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_acos"
            android:text="@string/acos"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_atan"
            android:text="@string/atan"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_actg"
            android:text="@string/actg"/>
    </TableRow>

    <TableRow android:layout_weight="1">
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_sqr"
            android:text="@string/sqr"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_sqrt"
            android:text="@string/cos"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_exp"
            android:text="@string/exp"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_log"
            android:text="@string/log"/>
    </TableRow>

    <TableRow android:layout_weight="1">
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_pi"
            android:text="@string/pi"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_e"
            android:text="@string/e"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_c"
            android:text="@string/c"/>
        <Button style="@style/MoreButtonTheme"
            android:id="@+id/button_na"
            android:text="@string/na"/>
    </TableRow>

</TableLayout>

